# memex

./: .dockerignore  .gitignore  .mcp.json  CNAME  README.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-landing.yml  release-macos.yml
claudedocs/: 2026-05-19-session-handoff.md  2026-05-21-vsd-2026-submission.md  2026-05-27-session-handoff-2.md  2026-05-27-session-handoff-3.md  2026-05-27-session-handoff.md  2026-05-28-session-handoff-2.md  2026-05-28-session-handoff.md  2026-05-29-embedding-cpu-coreml-investigation.md  2026-05-29-session-handoff.md  IMPLEMENTATION_REPORT.md  UPSTREAM_PR_PLAN.md  qdrant-audit-findings.md  qdrant-feature-comparison.md  qdrant-improvement-goal.md  qdrant-improvement-plan.md
claudedocs/phases/phase-7-demo-production/: video-script.md
claudedocs/reports/qdrant-uplift/: follow-up-deep-dive.html  follow-up-v2.html
claudedocs/upstream-pr/: 00-divergence-matrix.md  README.md
claudedocs/upstream-pr/artifacts/: README.md  pr-A-body.md  pr-B-body.md  pr-descriptions.md  pr-recall-body.md
claudedocs/upstream-pr/candidates/: 01-mix-modal-backport.md  02-p1-security-backport.md
claudedocs/upstream-pr/reviews/: cicd-impact.md  maintainer-q-and-a.md  security-review.md  test-plan.md
deploy/agent-integration/: README.md  settings.local.json.template
deploy/agent-integration/codex/: AGENTS.md.snippet  config.toml.snippet
deploy/agent-integration/cursor/: mcp.json.snippet
deploy/agent-integration/hooks/: post-tool-use.sh  session-end.sh  session-start.sh  user-prompt-submit.sh
deploy/agent-integration/shell/: memex.bash  memex.fish  memex.ps1  memex.zsh
deploy/web/: Dockerfile  README.md  entrypoint.sh
docs/: BUILD.md  IMPL-MCP.md  INSTALL.md  RELEASE_SIGNING.md  agent-integration.md  architecture.md  benchmarks.md  e2e-evidence.md  qdrant-features.md  web-vs-app.md  wired-but-dormant.md
docs/memex/: HANDOFF.md  PLAN.md
examples/sample-corpus/: 01-acme-api-feat-jwt-auth.jsonl  02-acme-api-fix-rate-limit.jsonl  03-acme-api-chore-db-migrate.jsonl  04-acme-web-feat-login-form.jsonl  05-acme-web-fix-build-fail.jsonl  06-acme-web-style-dark-mode.jsonl  07-ml-pipeline-feat-data-loader.jsonl  08-ml-pipeline-fix-training-nan.jsonl  09-ml-pipeline-chore-deps.jsonl  10-infra-feat-dockerize.jsonl  11-infra-fix-ci-cache.jsonl  12-infra-chore-terraform.jsonl  README.md
forge/: P01-contrarian.html  P02-ops-veteran.html  P03-speed-obsessed.html  P04-cost-conscious.html  P05-design-forward.html  P06-spreadsheet-jockey.html  P07-mobile-first.html  P08-slack-native.html  P09-cli-devotee.html  P10-dreamer.html  P100-palimpsest.html  P11-pragmatist.html  P12-privacy-hawk.html  P13-data-nerd.html  P14-educator.html  P15-community-builder.html  P16-solo-founder.html  P17-enterprise-buyer.html  P18-designer.html  P19-embedded.html  P20-oss-maintainer.html  P21-indie-hacker.html  P22-researcher.html  P23-game-designer.html  P24-reluctant-adopter.html  P25-ai-native.html  P26-anti-ai.html  P27-constellation.html  P28-aurora.html  P29-deepspace-parallax.html  P30-orbital-decay.html  P32-planetarium.html  P35-ink-bloom.html  P37-deep-sea.html  P40-frost-crystal.html  P45-vinyl-groove.html  P49-oscilloscope.html  P51-liquid-chrome.html  P52-holographic.html  P53-ferrofluid.html  (+25 more)
forms/: index.html
qdrant-features/: index.html
scripts/: gen-sample-corpus.py  start-qdrant.sh
scripts/demo/: capture-screenshots.sh  record-demo.sh  smoke-test.sh
scripts/og/: og-image.html
src/: dashboard.html  dashboard.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: quant_sweep.rs
src-tauri/fixtures/: labeled-queries.jsonl
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  codex_parser.rs  commands.rs  companion.rs  crud.rs  embed_late.rs  embed_pool.rs  enrich.rs  eval_ndcg.rs  hook.rs  indexer.rs  insights_cache.rs  install.rs  lens.rs  lib.rs  loopcheck.rs  main.rs  mcp.rs  parse_cache.rs  parser.rs  payload.rs  redact.rs  retrieval.rs  schema.rs  sec.rs  session_roots.rs  snapshot.rs  summary.rs  watcher.rs  web.rs  wrapped.rs
src-tauri/tests/: codex_parser_integration.rs  lens_integration.rs  loop_breaker_integration.rs  parser.rs  retrieval_integration.rs  schema_integration.rs  sec_integration.rs  snapshot_integration.rs
src-tauri/tests/data/: stuck_session.jsonl
src-tauri/tests/fixtures/: 01_minimal.jsonl  02_with_tool_use.jsonl  03_ai_title.jsonl  04_tool_error.jsonl  05_mixed.jsonl
src-tauri/tests/fixtures/schema/: migration-expected.json  v2-sample.json  v3-sample.json
src-tauri/tests/fixtures_codex/: README.md  rollout-01-minimal.jsonl  rollout-02-with-tools.jsonl  rollout-03-with-errors.jsonl  rollout-04-long-session.jsonl  rollout-05-empty-after-meta.jsonl
src-tauri/tests/fixtures_history/: history.jsonl
src-tauri/tests/fixtures_transcripts/: ses_minimal.jsonl  ses_with_error.jsonl
src-tauri/tests/fixtures_with_subagent/: main.jsonl
src-tauri/tests/fixtures_with_subagent/subagents/: agent-deadbeef.jsonl
tests/e2e/: README.md  collection-info.json  lens.json  mix.json  predict.json  qdrant-uplift.spec.ts  recall.json  reduced-motion.spec.ts  sample-session-id.txt  scan.json  search.json  topology.json
