[package]
name = "memex"
version = "0.1.0"
description = "Time Machine for AI session JSONL — 5 Qdrant-unique features (lens / mix / topology / replay / proactive recall). Tauri 2 + Rust + Qdrant."
authors = ["Sangguen Chang (Two-Weeks-Team)"]
repository = "https://github.com/Two-Weeks-Team/memex"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "memex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Issue #5 — `devtools` enables WebKit Inspector in the WebView. It's on
# by default so every normal developer command (`cargo build`,
# `cargo run`, `npm run tauri dev`, `npm run tauri build`) keeps
# Inspector available — no debugging friction.
#
# The only place Inspector is OFF is the *distribution build*:
# `npm run tauri:dist` passes `--no-default-features`, producing a
# `.dmg` that ships without Inspector. That's how `.dmg`s released to
# users should be built (production hygiene + notarization-friendly).
[features]
# `gui` = the macOS Tauri desktop app (default). `web` = the headless
# server variant (axum HTTP UI/API + HTTP MCP) used by the single Docker
# image; it links NO Tauri/WebKit so it builds on a slim Linux image.
# `devtools` keeps the WebKit Inspector in the GUI (see note above).
default = ["gui", "devtools"]
gui = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-plugin-deep-link", "dep:tauri-plugin-notification"]
devtools = ["tauri?/devtools"]
web = ["dep:axum", "dep:tower-http"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
# P8 — memex:// deep links route to one of the 5 WOW surfaces. The plugin
# registers the scheme via Info.plist (macOS) and Manifest (Windows/Linux)
# and emits a `deep-link://new-url` event back to the webview, which the
# frontend listens for and dispatches to the matching tab.
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
qdrant-client = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync"] }
fastembed = "5"
indicatif = "0.18"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
futures = "0.3"
petgraph = "0.6"
notify = "6"
notify-debouncer-full = "0.3"
sha2 = "0.10"
# P5 — KC-05 (Semaphore-cap pool sizing) + KG-02 (LRU cache for predict pivot parses).
num_cpus = "1"
lru = "0.12"
# Cross-platform `~`/data-dir resolution. Already a transitive dep via tauri;
# named here so the explicit `dirs::home_dir()` / `dirs::data_dir()` calls
# in sec.rs + snapshot.rs are honest about what they rely on. Gemini review
# on PR #2.
dirs = "5"
# `web` feature only — headless HTTP server (UI + JSON API + HTTP MCP) for the
# single Docker image. Pure-Rust, no system libs, so it builds on slim Linux.
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"], optional = true }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

